<resources>
    <string name="app_name">Sath Chaloo</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ticketNote">Please tell the driver your boarding number upon boarding the bus. Drivers are required to match your boarding number against booking record before allowing passengers to board</string>
    <string name="menu_routes">Routes search</string>
    <string name="menu_myrides">My rides</string>
    <string name="menu_transaction">Invoice</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_package">Request</string>
    <string name="menu_newroutes">Suggest new routes</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_freerides">Free Rides</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_maps">Home</string>
    <string name="title_activity_select_drop_off">Select Pickup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_find_stop">Find Stop</string>
    <string name="title_activity_track_ride">Track Activity</string>
    <string name="title_activity_test">Map</string>
    <string name="txt_lbl_transpayment">You can transfer your payment to our</string>
    <string name="transpayment">You can transfer your payment to our</string>
    <string name="bankAcc">bank account:</string>
    <string name="accTitle">Account Title</string>
    <string name="accountTitle">Sath ChalooPvt LTD</string>
    <string name="accountNumber">Account Number</string>
    <string name="accNum">0104263218</string>
    <string name="bank">Bank</string>
    <string name="txtbank">Meezan Bank (9964)</string>
    <string name="note">PLease submit the completed transaction slip using the form below. We\'ll review and update your wallet balance accordingly</string>
    <string name="upload">Upload deposit slip*</string>
    <string name="edtxt">Transaction ID/Deposit slip number*</string>
    <string name="edtxttwo">Amount*</string>
    <string name="submit">Submit</string>
    <string name="signupMobile">Continue with mobile number</string>
    <string name="loginbt">or continue with Login</string>
    <string name="txtview3">Seats remaining:</string>
    <string name="bookSeatsRemain">8</string>
    <string name="txtView6">Minimum fare:</string>
    <string name="orig_fare">30</string>
    <string name="txtVew">Schedule for:</string>
    <string name="sch_Date">Nov 15, 2019</string>
    <string name="txtView5">Pickup Location</string>
    <string name="bookStartLoc">Dilpasand Resturant Near Site</string>
    <string name="txtView9">Start:</string>
    <string name="bookStartTime">10:40 PM</string>
    <string name="txtView11">Dropoff Location</string>
    <string name="bookEndLoc">Dilpasand Resturant Near Site</string>
    <string name="txtView13">Start:</string>
    <string name="bookEndTime">10:40 PM</string>
    <string name="txtview15">Minimum fare applicable</string>
    <string name="txtview16">Number of seats:</string>
    <string name="calFare">30.0</string>
    <string name="txtview17">Total charges:</string>
    <string name="btn_book">Book now</string>
    <string name="btCancel">Cancel</string>
    <string name="bt_Ok">OK</string>
    <string name="bt_Sub">Submit</string>
    <string name="txt_sugg">Report</string>
    <string name="eSpin">Error Category</string>
    <string name="txtview12">Don\'t worry, it\'s not you - it\'s us Sorry about that, Please write in bellow section and submit the report</string>
    <string name="ed_lay2">Code</string>
    <string name="ed_lay3">New Password</string>
    <string name="ed_lay4">Re-try New Password</string>
    <string name="bt3">Button</string>
    <string name="em_lay">Email</string>
    <string name="bt_frg">Forget Password</string>
    <string name="txtview7">What\'s your DOB and Gender</string>
    <string name="ed_txt5">DOB</string>
    <string name="txt_fem">FEMALE</string>
    <string name="txt_mal">MALE</string>
    <string name="bt_con">Continue</string>
    <string name="lgEmail">Email</string>
    <string name="lg_pass">Password</string>
    <string name="log_in">Log in</string>
    <string name="btn_frgPass">Forget Password?</string>
    <string name="txtview2">Enter your mobile number</string>
    <string name="txt_view3">Enter your mobile number, to create an account or log in</string>
    <string name="edit_ph">333xxxxxxx</string>
    <string name="txt_lg">+92</string>
    <string name="btn_cont">Continue</string>
    <string name="DateOfRide">Nov 18, 2019</string>
    <string name="txtview53">Booking ID:</string>
    <string name="txtViewBookID">1727914</string>
    <string name="txtview55">RS:</string>
    <string name="txtViewFare">50</string>
    <string name="strtTime">5:39 PM</string>
    <string name="endTime">6:15 PM</string>
    <string name="pickup_pt">Outside NADRA Mega Center - SITE</string>
    <string name="dropoff_pt">Outside KFC - Gulistan e Johar</string>
    <string name="pay">Track</string>
    <string name="change_bt">Change</string>
    <string name="txtview30">Date</string>
    <string name="txtViewDate">10 Jan 2020, Tuesday</string>
    <string name="pickupAdd">Plot A 5/8, Block 5 A Block 5
Nazimabad, Karach, Karachi City, Sindh</string>
    <string name="dropOffAdd">Plot 177 S, Pakistan Employees Co-Operative
Housing Society Block 2 PECHS, Karachi,
Karachi City, Sindh, Pakistan</string>
    <string name="txtview44">Pickup/Return Time</string>
    <string name="pickupTime">9:00 AM</string>
    <string name="dropoffTime">9:00 PM</string>
    <string name="txtview77">Status:</string>
    <string name="txtviewstat">Not Taken</string>
    <string name="txtviewNotif">Focus on your exam, not commute!</string>
    <string name="txtviewNotifSub">Take FREE RIDES with us! We have launched multiple shifts from across Karachi to and from SZABIST University. Book your ride NOW</string>
    <string name="btn_sk">Skip</string>
    <string name="intro_des">TextView</string>
    <string name="intro_ti">TextView</string>
    <string name="txtview10">Days</string>
    <string name="chp_m">M</string>
    <string name="chp_t">T</string>
    <string name="chp_w">W:</string>
    <string name="chp_f">F:</string>
    <string name="chp_s">S:</string>
    <string name="btn_Pay">Pay</string>
    <string name="txtview40">Total Amount</string>
    <string name="txtview8">Status</string>
    <string name="txtviewAmt">5000</string>
    <string name="txtviewStat">Pending</string>
    <string name="lbl_num">Phone Number</string>
    <string name="txt_num">0321-1234567</string>
    <string name="txt_email">abc@live.com</string>
    <string name="lbl_pas">Change Password</string>
    <string name="txt_pas">*********</string>
    <string name="lbl_gen">Gender</string>
    <string name="txt_gen">Male</string>
    <string name="lbl_dob">Date of Birth</string>
    <string name="txt_dob">4 May 2001</string>
    <string name="lbl_log">Logout</string>
    <string name="txt_name">Saad Anwar</string>
    <string name="btn8">Book now</string>
    <string name="txtview19">Book return ride</string>
    <string name="reviewInfo">Review Information</string>
    <string name="txtAc">Standard</string>
    <string name="priceAc">7,598</string>
    <string name="txtName">Name</string>
    <string name="txt_na">Saad</string>
    <string name="lbl_nb">Number</string>
    <string name="txt_nb">+9233312131</string>
    <string name="lbl_dt">Time to reach destination</string>
    <string name="txt_st">9:00 - 9:30</string>
    <string name="btn_sub">Submit Request</string>
    <string name="lbl_rt">Return time</string>
    <string name="txt_rt">18:00 - 18:30</string>
    <string name="dist_pickup">21 min from clifton beach</string>
    <string name="start_pt">outside Madina Masjid-Clifton KHI</string>
    <string name="end_pt">Outside Eidgah Bus Stop (Nazimabad No.3) Nazimabad</string>
    <string name="dist_dropoff">1 min to Nazimabad</string>
    <string name="start_ti">11:55 AM</string>
    <string name="end_ti">12:56 PM</string>
    <string name="seat_rem">Seats Remaning: 14</string>
    <string name="chp2">Tomorrow</string>
    <string name="chp3">Tuesday</string>
    <string name="chp4">Wednesday</string>
    <string name="select_pickup">Select Pickup Location</string>
    <string name="btn_select">Select Pickup</string>
    <string name="chp_mo">Monday</string>
    <string name="chp_thurs">Thursday</string>
    <string name="chp_fri">Friday</string>
    <string name="chp_sat">Saturday</string>
    <string name="chp_sun">Sunday</string>
    <string name="select_DnT">Select Days and Timings</string>
    <string name="pick_up">Pick up Time</string>
    <string name="drop_off">Drop off Time</string>
    <string name="chp_we">W</string>
    <string name="chp_fi">F</string>
    <string name="chp_sa">S</string>
    <string name="txtview_MonDrop">TextView</string>
    <string name="txtview_Monpick">TextView</string>
    <string name="txtview_TueDrop">TextView</string>
    <string name="txtview_Tuepick">TextView</string>
    <string name="txtview_WedDrop">TextView</string>
    <string name="txtview_Wedpick">TextView</string>
    <string name="txtview_ThuDrop">TextView</string>
    <string name="txtview_Thupick">TextView</string>
    <string name="txtview_friDrop">TextView</string>
    <string name="txtview_fripick">TextView</string>
    <string name="txtview_SatDrop">TextView</string>
    <string name="txtview_Satpick">TextView</string>
    <string name="txtview_SunDrop">TextView</string>
    <string name="txtview_Sunpick">TextView</string>
    <string name="txtview18">Select your desire days</string>
    <string name="lbl_pool">Carpool</string>
    <string name="lbl_car">Car (Coming Soon)</string>
    <string name="lbl_bus">Shuttle Bus (Coming Soon)</string>
    <string name="txt_head">What\'s your email?</string>
    <string name="txt_subhead">Get ride receipts along with promotions in your inbox</string>
    <string name="txt_phead">Create a Strong Password</string>
    <string name="txt_psubhead">Using Capital letter, numbers and special character</string>
    <string name="txt_uhead">What\'s your Name?</string>
    <string name="txt_usubhead">Your name helps rider to confirm who they\'re picking up</string>
    <string name="txt_user">User Name</string>
    <string name="txt_sign">Sign Up</string>
    <string name="txt_sp">Enter Something</string>
    <string name="txt_ticketStart">Outside NAD...</string>
    <string name="txtView28">Start</string>
    <string name="ticketStartTi">5:36 PM</string>
    <string name="ticketEndTi">6:15 PM</string>
    <string name="ticketEndLoc">Outside KFC..</string>
    <string name="txtView31">End</string>
    <string name="btn_booking">Return Booking</string>
    <string name="txtView33">No. of Seats:</string>
    <string name="ticket_seatNo">07</string>
    <string name="txtView35">Booking ID</string>
    <string name="txtView37">Date</string>
    <string name="lbl_invoiceNo">Invoice No.</string>
    <string name="txt_invoice">102034</string>
    <string name="lbl_inAmt">Invoice Amount:</string>
    <string name="txtVewDate">10 Jan, 2020</string>
    <string name="pickup_loc">Select Pickup Location</string>
    <string name="btn_selPick">Select Destination</string>
    <string name="btn_serv">Services</string>
    <string name="loader">Progress bar</string>
</resources>