<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_swap_calls_black_24dp"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_myrides"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/menu_myrides" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_newroutes"
            android:icon="@drawable/ic_call_split_black_24dp"
            android:title="@string/menu_newroutes" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_freerides"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_freerides" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />

    </group>
</menu>
