<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="18dp"
    android:outlineSpotShadowColor="@color/colorPrimaryDark"
    android:id="@+id/trans_bs_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt_lbl_invoiceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_invoiceNo"
            android:textColor="@color/colorText1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewtInvoiceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_invoice"
            android:textColor="@color/colorText1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_lbl_invoiceNo"
            app:layout_constraintTop_toBottomOf="@+id/txt_lbl_invoiceNo" />

        <TextView
            android:id="@+id/txt_lbl_invoiceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lbl_inAmt"
            android:textColor="@color/colorText1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_swap_calls_black_24dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_lbl_invoiceAmount"
            app:layout_constraintTop_toBottomOf="@+id/txt_lbl_invoiceAmount" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/txtviewAmt"
            android:textColor="@color/colorText1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/imageView17" />

        <TextView
            android:id="@+id/txt_lbl_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtView37"
            android:textColor="@color/colorText1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewtInvoiceNumber"
            app:layout_constraintTop_toBottomOf="@+id/textViewtInvoiceNumber" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txtVewDate"
            android:textColor="@color/colorText1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_lbl_date"
            app:layout_constraintTop_toBottomOf="@+id/txt_lbl_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>