<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editlay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_lay2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editlay3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ed_lay3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/editlay2"
        app:layout_constraintStart_toStartOf="@+id/editlay2"
        app:layout_constraintTop_toBottomOf="@+id/editlay2" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editlay4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ed_lay4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="@+id/editlay3"
        app:layout_constraintStart_toStartOf="@+id/editlay3"
        app:layout_constraintTop_toBottomOf="@+id/editlay3" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:cornerRadius="8dp"
        android:text="@string/bt3"
        app:layout_constraintEnd_toEndOf="@+id/editlay4"
        app:layout_constraintStart_toStartOf="@+id/editlay4"
        app:layout_constraintTop_toBottomOf="@+id/editlay4" />
</androidx.constraintlayout.widget.ConstraintLayout>